Fix z-index for staging warning alert.

--- a/styles.scss
+++ b/styles.scss
@@ -346,6 +346,7 @@ blockquote {
   right: 0;
   text-align: center;
   padding: .2em;
+  z-index: 1030;
 }
 
 .Summary {
